[package]
name = "block-sys"
version = "0.0.3" # Remember to update html_root_url in lib.rs
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2021"

description = "Raw bindings to Apple's C language extension of blocks"
keywords = ["objective-c", "macos", "ios", "blocks", "sys"]
categories = [
    "external-ffi-bindings",
    # "no_std", # TODO
    "os::macos-apis",
]
repository = "https://github.com/madsmtm/objc2"
documentation = "https://docs.rs/block-sys/"
license = "MIT"

readme = "README.md"

# Downstream users can customize the linking!
# See https://doc.rust-lang.org/cargo/reference/build-scripts.html#overriding-build-scripts
links = "block_0_0"
build = "build.rs"

[features]
# The default runtime is Apple's. Other platforms will probably error if the
# correct feature flag is not specified.
default = ["apple"]

# Link to Apple's libclosure (exists in libSystem)
apple = []

# Link to libBlocksRuntime from compiler-rt
compiler-rt = []

# Link to GNUStep's libobjc2 (which contains the block implementation)
gnustep-1-7 = ["objc-sys", "objc-sys/gnustep-1-7"]
gnustep-1-8 = ["objc-sys/gnustep-1-8", "gnustep-1-7"]
gnustep-1-9 = ["objc-sys/gnustep-1-9", "gnustep-1-8"]
gnustep-2-0 = ["objc-sys/gnustep-2-0", "gnustep-1-9"]
gnustep-2-1 = ["objc-sys/gnustep-2-1", "gnustep-2-0"]

# Link to Microsoft's libobjc2
winobjc = ["objc-sys/winobjc", "gnustep-1-8"]

# TODO
objfw = []

[dependencies]
objc-sys = { path = "../objc-sys", version = "=0.2.0-alpha.1", optional = true }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
no-default-features = true
