[package]
name = "block2"
# Remember to update html_root_url in lib.rs and README.md
version = "0.2.0-alpha.0"
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Apple's C language extension of blocks"
keywords = ["objective-c", "macos", "ios", "blocks"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "os::macos-apis",
]
readme = "README.md"
repository = "https://github.com/madsmtm/objc2"
documentation = "https://docs.rs/block2/"
license = "MIT"

exclude = [
    "tests-ios/**",
]

[dependencies]
objc2-encode = { path = "../objc2-encode", version = "2.0.0-alpha.1" }
block-sys = { path = "../block-sys", version = "0.0.1" }
