[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
objc2 = { path = "../crates/objc2", features = ["foundation"], default-features = false }

[features]
default = ["apple", "std"]
std = ["objc2/std"]
# Runtime
apple = ["objc2/apple"]
gnustep-1-7 = ["objc2/gnustep-1-7"]
gnustep-1-8 = ["gnustep-1-7", "objc2/gnustep-1-8"]
gnustep-1-9 = ["gnustep-1-8", "objc2/gnustep-1-9"]
gnustep-2-0 = ["gnustep-1-9", "objc2/gnustep-2-0"]
gnustep-2-1 = ["gnustep-2-0", "objc2/gnustep-2-1"]

[[bin]]
name = "class"
path = "fuzz_targets/class.rs"
test = false
doc = false

[[bin]]
name = "sel"
path = "fuzz_targets/sel.rs"
test = false
doc = false

[workspace]
members = ["."]
